--- a/static.hzshuangmei.com/css/m/shuiguangzhen/theme_sj.css
+++ b/static.hzshuangmei.com/css/m/shuiguangzhen/theme_sj.css
@@ -138,7 +138,7 @@ body {
 .zt-banner {
   min-width: 15.99829352rem;
   overflow: hidden;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/banner.jpg') center top no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/banner.jpg') center top no-repeat;
   padding-bottom: 54%;
   background-size: auto 100%;
 }
@@ -147,12 +147,12 @@ body {
   margin-left: auto;
   margin-right: auto;
   height: 2.77303754rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bgt1.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bgt1.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m1 .consult {
   height: 1.49317406rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg_consult1.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg_consult1.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m1 .g-doc {
@@ -240,7 +240,7 @@ body {
   background-color: #c4dfee;
 }
 .zt-m2 {
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg2.jpg') center top no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg2.jpg') center top no-repeat;
   height: 27.94368601rem;
   background-size: auto 100%;
 }
@@ -248,12 +248,12 @@ body {
   margin-left: auto;
   margin-right: auto;
   height: 2.30375427rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bgt2.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bgt2.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m2 .consult {
   height: 1.3225256rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg_consult2.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg_consult2.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m2 .g-doc {
@@ -286,26 +286,26 @@ body {
 }
 .zt-m3 {
   height: 30.29010239rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg3.jpg') center 9.0443686rem no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg3.jpg') center 9.0443686rem no-repeat;
   background-size: 100%;
 }
 .zt-m3 .zt-title {
   margin-left: auto;
   margin-right: auto;
   height: 3.58361775rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bgt3.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bgt3.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m3 h3 {
   margin-left: 0.21331058rem;
   width: 7.721843rem;
   height: 0.63993174rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bgt3_2.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bgt3_2.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m3 .consult {
   height: 1.83447099rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg_consult3.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg_consult3.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m3 .g-doc {
@@ -356,19 +356,19 @@ body {
   margin-left: auto;
   margin-right: auto;
   height: 3.54095563rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bgt4.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bgt4.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m4 .consult {
   height: 1.70648464rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg_consult4.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg_consult4.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m4 .g-doc {
   padding-top: 0.85324232rem;
 }
 .zt-m4 .zt-content {
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/img4.jpg') center 2.34641638rem no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/img4.jpg') center 2.34641638rem no-repeat;
   background-size: 100%;
   /*margin-top: 70rem/@fb;*/
   height: 14.07849829rem;
@@ -425,12 +425,12 @@ body {
   margin-left: auto;
   margin-right: auto;
   height: 4.778157rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bgt5.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bgt5.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m5 .consult {
   height: 3.24232082rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg_consult5.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg_consult5.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m5 .g-doc {
@@ -518,7 +518,7 @@ body {
 .zt-m5 .zt-content .item4 {
   width: 7.16723549rem;
   height: 7.29522184rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg6.jpg') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg6.jpg') center center no-repeat;
   background-size: 100%;
 }
 .zt-m5 .zt-content .consult {
@@ -528,12 +528,12 @@ body {
   margin-left: auto;
   margin-right: auto;
   height: 2.85836177rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bgt6.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bgt6.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m6 .consult {
   height: 1.74914676rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg_consult6.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg_consult6.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m6 .g-doc {
@@ -597,7 +597,7 @@ body {
   position: relative;
 }
 .zt-m6 .zt-content .title span {
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg6_point.png');
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg6_point.png');
   display: block;
   width: 0.17064846rem;
   height: 0.17064846rem;
@@ -635,18 +635,18 @@ body {
   margin-top: 1.49317406rem;
 }
 .zt-m7 {
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg7.jpg') center top no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg7.jpg') center top no-repeat;
 }
 .zt-m7 .zt-title {
   margin-left: auto;
   margin-right: auto;
   height: 2.73037543rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bgt7.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bgt7.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m7 .consult {
   height: 1.74914676rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg_consult7.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg_consult7.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m7 .g-doc {
@@ -667,13 +667,13 @@ body {
 }
 .zt-m8 {
   height: 21.20307167rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg8.jpg') center top no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg8.jpg') center top no-repeat;
 }
 .zt-m8 .zt-title {
   margin-left: auto;
   margin-right: auto;
   height: 1.62116041rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bgt8.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bgt8.png') center center no-repeat;
   background-size: auto 100%;
 }
 .zt-m8 .zt-title {
@@ -690,7 +690,7 @@ body {
   padding-top: 1.0665529rem;
   padding-right: 0.85324232rem;
   height: 14.93174061rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg8_border.png') 4.90614334rem 1.79180887rem no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg8_border.png') 4.90614334rem 1.79180887rem no-repeat;
   background-size: 5.07679181rem;
 }
 .zt-m8 .zt-content img {
@@ -804,12 +804,12 @@ body {
 .zt-m8 .consult-box .consult1 {
   width: 4.94880546rem;
   height: 1.15187713rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg_consult82.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg_consult82.png') center center no-repeat;
   background-size: 100%;
 }
 .zt-m8 .consult-box .consult2 {
   width: 4.94880546rem;
   height: 1.15187713rem;
-  background: url('https://img.hzshuangmei.com/m/shoulianzhen/bg_consult81.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/m/shuiguangzhen/bg_consult81.png') center center no-repeat;
   background-size: 100%;
 }
