--- a/static.hzshuangmei.com/css/pc/shuiguangzhen/theme.css
+++ b/static.hzshuangmei.com/css/pc/shuiguangzhen/theme.css
@@ -136,7 +136,7 @@ body {
 }
 /*banner*/
 .zt-banner {
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/banner.jpg') center top no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/banner.jpg') center top no-repeat;
   height: 746px;
 }
 .zt-banner .g-doc {
@@ -155,12 +155,12 @@ body {
   margin-right: auto;
   height: 148px;
   width: 718px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bgt1.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bgt1.png') center center no-repeat;
 }
 .zt-m1 .consult {
   height: 106px;
   width: 500px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg_consult1.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg_consult1.png') center center no-repeat;
 }
 .zt-m1 .g-doc {
   padding-bottom: 80px;
@@ -212,7 +212,7 @@ body {
   line-height: 48px;
 }
 .zt-m2 {
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg2.jpg') center top no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg2.jpg') center top no-repeat;
   height: 1092px;
 }
 .zt-m2 .zt-title {
@@ -220,12 +220,12 @@ body {
   margin-right: auto;
   height: 132px;
   width: 878px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bgt2.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bgt2.png') center center no-repeat;
 }
 .zt-m2 .consult {
   height: 62px;
   width: 408px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg_consult2.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg_consult2.png') center center no-repeat;
 }
 .zt-m2 .zt-content {
   padding: 342px 0 0 750px;
@@ -253,25 +253,25 @@ body {
 }
 .zt-m3 {
   height: 1360px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg3.jpg') center 280px no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg3.jpg') center 280px no-repeat;
 }
 .zt-m3 .zt-title {
   margin-left: auto;
   margin-right: auto;
   height: 172px;
   width: 658px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bgt3.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bgt3.png') center center no-repeat;
 }
 .zt-m3 h3 {
   margin-left: 10px;
   width: 538px;
   height: 44px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bgt3_2.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bgt3_2.png') center center no-repeat;
 }
 .zt-m3 .consult {
   height: 106px;
   width: 500px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg_consult3.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg_consult3.png') center center no-repeat;
 }
 .zt-m3 .zt-content {
   margin-top: 100px;
@@ -310,19 +310,19 @@ body {
 }
 .zt-m4 {
   height: 1450px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg4.jpg') center top no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg4.jpg') center top no-repeat;
 }
 .zt-m4 .zt-title {
   margin-left: auto;
   margin-right: auto;
   height: 144px;
   width: 728px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bgt4.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bgt4.png') center center no-repeat;
 }
 .zt-m4 .consult {
   height: 106px;
   width: 500px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg_consult4.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg_consult4.png') center center no-repeat;
 }
 .zt-m4 .zt-content {
   margin-top: 70px;
@@ -369,19 +369,19 @@ body {
 }
 .zt-m5 {
   height: 1182px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg5.jpg') center top no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg5.jpg') center top no-repeat;
 }
 .zt-m5 .zt-title {
   margin-left: auto;
   margin-right: auto;
   height: 234px;
   width: 728px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bgt5.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bgt5.png') center center no-repeat;
 }
 .zt-m5 .consult {
   height: 152px;
   width: 182px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg_consult5.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg_consult5.png') center center no-repeat;
 }
 .zt-m5 .zt-content {
   margin-top: 72px;
@@ -466,12 +466,12 @@ body {
   margin-right: auto;
   height: 144px;
   width: 938px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bgt6.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bgt6.png') center center no-repeat;
 }
 .zt-m6 .consult {
   height: 106px;
   width: 500px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg_consult6.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg_consult6.png') center center no-repeat;
 }
 .zt-m6 .zt-content {
   margin-top: 80px;
@@ -548,7 +548,7 @@ body {
   position: relative;
 }
 .zt-m6 .zt-content .title span {
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg6_point.png');
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg6_point.png');
   display: block;
   width: 8px;
   height: 8px;
@@ -561,19 +561,19 @@ body {
 }
 .zt-m7 {
   height: 1320px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg7.jpg') center top no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg7.jpg') center top no-repeat;
 }
 .zt-m7 .zt-title {
   margin-left: auto;
   margin-right: auto;
   height: 144px;
   width: 938px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bgt7.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bgt7.png') center center no-repeat;
 }
 .zt-m7 .consult {
   height: 106px;
   width: 434px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg_consult7.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg_consult7.png') center center no-repeat;
 }
 .zt-m7 .zt-content {
   margin-top: 70px;
@@ -583,14 +583,14 @@ body {
 }
 .zt-m8 {
   height: 1004px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg8.jpg') center top no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg8.jpg') center top no-repeat;
 }
 .zt-m8 .zt-title {
   margin-left: auto;
   margin-right: auto;
   height: 90px;
   width: 744px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bgt8.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bgt8.png') center center no-repeat;
 }
 .zt-m8 .zt-title {
   margin-left: 420px;
@@ -606,7 +606,7 @@ body {
   padding-top: 70px;
   padding-right: 40px;
   height: 800px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg8_border2.png') 585px 103px no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg8_border2.png') 585px 103px no-repeat;
 }
 .zt-m8 .zt-content img {
   position: absolute;
@@ -714,10 +714,10 @@ body {
 .zt-m8 .consult-box .consult1 {
   width: 232px;
   height: 54px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg_consult82.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg_consult82.png') center center no-repeat;
 }
 .zt-m8 .consult-box .consult2 {
   width: 232px;
   height: 54px;
-  background: url('https://img.hzshuangmei.com/pc/shoulianzhen/bg_consult81.png') center center no-repeat;
+  background: url('https://img.hzshuangmei.com/pc/shuiguangzhen/bg_consult81.png') center center no-repeat;
 }
