--- a/static.hzshuangmei.com/css/xzh/style.css
+++ b/static.hzshuangmei.com/css/xzh/style.css
@@ -2899,7 +2899,8 @@ body {
     width: calc(25% - 15px);
     margin-right: 15px;
     margin-bottom: 22.5px;
-    display: inline-block;
+    float: left;
+    /*display: inline-block;*/
     vertical-align: top
 }
 
