--- a/static.hzshuangmei.com/css/xzh/style.css
+++ b/static.hzshuangmei.com/css/xzh/style.css
@@ -4509,7 +4509,7 @@ body {
 }
 .article-content p img,.article-content img{
     display: block;
-    width: 100%;
+    /*width: 100%;*/
     margin: 1em auto;
     text-align: center;
     border-radius: 4px;
